--- a/Develop/index.html
+++ b/Develop/index.html
@@ -55,11 +55,10 @@
                 </p>
             </section>
         </section>
-        <aside>
-            <article id="benefits">
+            <aside id="benefits">
                     <section class="benefit-lead">
                         <h3>Lead Generation</h3>
-                        <img src="./assets/images/lead-generation.png" />
+                        <img src="./assets/images/lead-generation.png" alt="Generation Icon">
                         <p>
                             Inbound strategies for lead generation require less work for your business, bringing
                             customers directly to your website.
@@ -67,7 +66,7 @@
                     </section>
                     <section class="benefit-brand">
                         <h3>Brand Awareness</h3>
-                        <img src="./assets/images/brand-awareness.png" />
+                        <img src="./assets/images/brand-awareness.png" alt="Awareness Icon">
                         <p>
                             Users find your business through paid and organic searches, increasing the search ranking
                             and visibility for your business.
@@ -75,13 +74,13 @@
                     </section>
                     <section class="benefit-cost">
                         <h3>Cost Management</h3>
-                        <img src="./assets/images/cost-management.png"></img>
+                        <img src="./assets/images/cost-management.png" alt="Cost Icon">
                         <p>
                             As the search ranking for your business increases, your advertising costs decrease, and you
                             no longer need to advertise your page.
                         </p>
-            </article>
-        </aside>
+                    </section>
+             </aside>
     </main>
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
