--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<title>Product - Engine Optimization - Provitor: Horiseon</title>
 
 <head>
     <meta charset="UTF-8" />
